remove schema identifier and use ref ID directly in to comments and likes
